# Robocup-Home

./: README.md
Tutorial 1/Bowen_Li_Tiago_roboCupHome_tutorial1/: readME.txt
Tutorial 1/Bowen_Li_Tiago_roboCupHome_tutorial1/turtle_vis/: CMakeLists.txt
Tutorial 1/Bowen_Li_Tiago_roboCupHome_tutorial1/turtle_vis/launch/: TurtleVis.launch
Tutorial 1/Bowen_Li_Tiago_roboCupHome_tutorial1/turtle_vis/launch/rvizConfigs/: turtle_gains.yaml
Tutorial 1/Bowen_Li_Tiago_roboCupHome_tutorial1/turtle_vis/msg/: DesiredPose.msg
Tutorial 1/Bowen_Li_Tiago_roboCupHome_tutorial1/turtle_vis/src/solutions/: turtle_control_node.cpp  turtle_vis_node.cpp
Tutorial 2/Bowen_Li_coboCupHome_tutorial2/: Readme.txt
Tutorial 2/Bowen_Li_coboCupHome_tutorial2/controllers_tutorials/: CMakeLists.txt  tutorial_controller_plugins.xml
Tutorial 2/Bowen_Li_coboCupHome_tutorial2/controllers_tutorials/config/: combined_resource_controller.yaml  new_torso_controller.yaml
Tutorial 2/Bowen_Li_coboCupHome_tutorial2/controllers_tutorials/src/: new_torso_controller.cpp
Tutorial 2/Bowen_Li_coboCupHome_tutorial2/ics_gazebo/config/: tiago.rviz
Tutorial 2/Bowen_Li_coboCupHome_tutorial2/ics_gazebo/launch/: edit_world.launch
Tutorial 2/Bowen_Li_coboCupHome_tutorial2/ics_gazebo/models/door/: door.sdf
Tutorial 2/Bowen_Li_coboCupHome_tutorial2/ics_gazebo/worlds/: tutorial.world  tutorial2.world
Tutorial 2/Bowen_Li_coboCupHome_tutorial2/turtle_vis/: CMakeLists.txt
Tutorial 2/Bowen_Li_coboCupHome_tutorial2/turtle_vis/launch/: TurtleVis.launch
Tutorial 2/Bowen_Li_coboCupHome_tutorial2/turtle_vis/launch/rvizConfigs/: turtleTutorial.rviz  turtle_gains.yaml
Tutorial 2/Bowen_Li_coboCupHome_tutorial2/turtle_vis/src/solutions/: turtle_control_node.cpp  turtle_set_position.cpp
Tutorial 2/Bowen_Li_coboCupHome_tutorial2/turtle_vis/srv/: send_desired_pose.srv
Tutorial 3/Bowen_Li_Tiago_roboCupHome_tutorial3/: readMe.txt
Tutorial 3/Bowen_Li_Tiago_roboCupHome_tutorial3/task_2/navigation_goals/: CMakeLists.txt  package.xml
Tutorial 3/Bowen_Li_Tiago_roboCupHome_tutorial3/task_2/navigation_goals/launch/: navigation.launch
Tutorial 3/Bowen_Li_Tiago_roboCupHome_tutorial3/task_2/navigation_goals/src/: navigation_goals.cpp
Tutorial 3/Bowen_Li_Tiago_roboCupHome_tutorial3/task_3/navigation_goals_lift/: CMakeLists.txt  package.xml
Tutorial 3/Bowen_Li_Tiago_roboCupHome_tutorial3/task_3/navigation_goals_lift/launch/: navigation.launch
Tutorial 3/Bowen_Li_Tiago_roboCupHome_tutorial3/task_3/navigation_goals_lift/src/: navigation_goals_lift.cpp
Tutorial 4/Bowen_Li_Zhannan_Zhang_Tutorial4/: ReadMe.txt
Tutorial 4/Bowen_Li_Zhannan_Zhang_Tutorial4/from2Dto3D/: CMakeLists.txt  package.xml
Tutorial 4/Bowen_Li_Zhannan_Zhang_Tutorial4/from2Dto3D/include/from2Dto3D/: from2Dto3D_class.h
Tutorial 4/Bowen_Li_Zhannan_Zhang_Tutorial4/from2Dto3D/launch/: from2dto2d.launch
Tutorial 4/Bowen_Li_Zhannan_Zhang_Tutorial4/from2Dto3D/src/: from2Dto3D_class.cpp  from2Dto3D_node.cpp
Tutorial 4/Bowen_Li_Zhannan_Zhang_Tutorial4/object_recognition/: CMakeLists.txt  package.xml
Tutorial 4/Bowen_Li_Zhannan_Zhang_Tutorial4/object_recognition/include/object_recognition/: objectRecognition_class.h
Tutorial 4/Bowen_Li_Zhannan_Zhang_Tutorial4/object_recognition/launch/: objectRecognition_launch.launch
Tutorial 4/Bowen_Li_Zhannan_Zhang_Tutorial4/object_recognition/src/: objectRecognition_class.cpp  objectRecognition_node.cpp
Tutorial 4/Bowen_Li_Zhannan_Zhang_Tutorial4/plane_segmentation/: CMakeLists.txt  package.xml
Tutorial 4/Bowen_Li_Zhannan_Zhang_Tutorial4/plane_segmentation/config/: plan_segment.rviz
Tutorial 4/Bowen_Li_Zhannan_Zhang_Tutorial4/plane_segmentation/include/plane_segmentation/: PlaneSegmentation_class.h
Tutorial 4/Bowen_Li_Zhannan_Zhang_Tutorial4/plane_segmentation/launch/: plane_segment.launch
Tutorial 4/Bowen_Li_Zhannan_Zhang_Tutorial4/plane_segmentation/src/: PlaneSegmentation_class.cpp  PlaneSegmentation_node.cpp
Tutorial5/: readMe.txt
Tutorial5/arm_hsrb/: CMakeLists.txt  package.xml
Tutorial5/arm_hsrb/include/arm_hsrb/: joint_space.h
Tutorial5/arm_hsrb/launch/: hsrb1.launch  hsrb2.launch  hsrb3.launch
Tutorial5/arm_hsrb/lib/: grab.py  moveit_fk.py  moveit_ik.py  release.py
Tutorial5/arm_hsrb/src/: joint_space.cpp  joint_space_node.cpp
Tutorial5/arm_hsrb/srv/: grasp.srv
Tutorial5/from2Dto3D/: CMakeLists.txt
Tutorial5/from2Dto3D/include/from2Dto3D/: from2Dto3D.h
Tutorial5/from2Dto3D/msg/: RectArray.msg
Tutorial5/from2Dto3D/src/: from2Dto3D.cpp  from2Dto3D_node.cpp
Tutorial5/hsrb_move/: CMakeLists.txt  package.xml
Tutorial5/hsrb_move/include/hsrb_move/: hsrb_move.h
Tutorial5/hsrb_move/src/: hsrb_move.cpp  hsrb_move_node.cpp
Tutorial5/hsrb_move/srv/: target.srv
Tutorial5/navigation/: package.xml
Tutorial5/navigation/launch/: hsrb_apartment_no_objects_world.launch  hsrb_apartment_world.launch  hsrb_empty_world.launch  hsrb_hcr2013_world.launch  hsrb_megaweb2015_no_objects_world.launch  hsrb_megaweb2015_world.launch  hsrb_mock_home_world.launch  hsrc_apartment_no_objects_world.launch  hsrc_apartment_world.launch  hsrc_empty_world.launch  hsrc_hcr2013_world.launch  hsrc_megaweb2015_no_objects_world.launch  hsrc_megaweb2015_world.launch  hsrc_mock_home_world.launch  ics_world.launch  my_world.launch
Tutorial5/navigation/launch/include/: hsrb_gazebo_common.xml
Tutorial5/object_recognition/: CMakeLists.txt  package.xml
Tutorial5/object_recognition/include/object_recognition/: ObjectRecognition.h
Tutorial5/object_recognition/launch/: object_recognition.launch
Tutorial5/object_recognition/src/: object_recognition.cpp  object_recognition_node.cpp
Tutorial5/perception_msgs/: CMakeLists.txt
Tutorial5/plane_segmentation/: CMakeLists.txt
Tutorial5/plane_segmentation/include/plane_segmentation/: PlaneSegmentation.h
Tutorial5/plane_segmentation/launch/: plane_segmentation.launch
Tutorial5/plane_segmentation/rviz/: tutorial4.rviz
Tutorial5/plane_segmentation/src/: PlaneSegmentation.cpp  PlaneSegmentation_node.cpp
(+9 files in other folders)
